<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<resources>

    <string name="app_name">AGENDA</string>
    <string name="editar">EDITAR</string>
    <string name="concluido">Concluido</string>
    <string name="dtConc">Data Concl.: </string>
    <string name="dtLanc">Data Lanç.: </string>
    <string name="para">Para: </string>
    <string name="todos">Todos</string>
    <string name="updateDelete">UPDATE/DELETE</string>
    <string name="selectAgenda">SELECT AGENDA</string>
    <string name="selectTarefa">SELECT TAREFA</string>
    <string name="concluidos">Concluidos</string>
    <string name="pendentes">Pendentes</string>
    <string name="responsavel">Responsavel:  </string>   
    <string name="action_sql">SQL</string>    
    <string name="action_removerTarefa">REMOVER TAREFA</string>
    <string name="action_eventos">EVENTOS</string>
    <string name="action_novoEvento">NOVO EVENTO</string>
    <string name="action_novaTarefa">NOVA TAREFA</string>
    <string name="action_calendario">Calendário</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_configuracoesM">CONFIGURAÇÕES</string>
    <string name="action_tarefas">TAREFAS</string>
    <string name="action_hoje">Hoje</string>
    <string name="action_search_day">Buscar data</string>
    <string name="action_baixar">Baixar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_Deletar">Deletar</string>
    <string name="Suser">Selecione o usuário</string>
    <string name="senha">Senha</string>
    <string name="BAvancar">Avançar</string>
    <string name="btVolta">Voltar</string>
    <string name="btSalvar">Salvar</string>
    <string name="btExecutar">Executar</string>
    <string name="sincronizar">Sincronização de dados</string>
    <string name="baixados">Mostrar eventos baixados</string>
    <string name="cdEvento">Cod.:</string>
    <string name="Obs">Observações</string>
    <string name="Local">Local</string>
    <string name="Desc">Descrição</string>
    <string name="Data">Data</string>
    <string name="HoraInicio">Hora Inicial</string>
    <string name="HoraFim">Hora Final</string>
    <string name="action_today">Dia atual</string>
    <string name="action_day_view">Visualizar por dia</string>
    <string name="action_three_day_view">Visualizar 3 dias</string>
    <string name="action_week_view">Visualizar por semana</string>
    <string name="title_activity_splash">Atualizando Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash2">Atualizando Tarefas</string>

</resources>
