<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <CheckBox
        android:id="@+id/sincronizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:checked="true"
        android:text="@string/sincronizar" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sincronizar"
        android:layout_alignEnd="@+id/sincronizar"
        android:layout_below="@+id/sincronizar"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/btSalvar" />

    <CheckBox
        android:id="@+id/baixados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sincronizar"
        android:checked="true"
        android:text="@string/baixados" />

</RelativeLayout>
