<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TableLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent">

			    <TableRow
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent" >

		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="22dp"
		                android:text="@string/Suser"
		                android:textSize="25sp" />            
           		</TableRow>

			    <TableRow
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent" >
		            
		            <Spinner
		                android:id="@+id/spinnerUsuario"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="20dp" />
		        </TableRow>
		        
			   <TableRow
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent" >

		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="22dp"
		                android:text="@string/senha"
		                android:textSize="25sp" />            
           		</TableRow>
           		
			   	<TableRow
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent" >
		        	
			   	   <EditText
			   	       android:id="@+id/edt_senha"
			   	       android:layout_width="match_parent"
			   	       android:layout_height="wrap_content"
			   	       android:ems="10"
			   	       android:inputType="textPassword" />

			    </TableRow>
		        
			    <TableRow
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent" >

		            <Button
		                android:id="@+id/blogin"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:background="@drawable/button"
		                android:text="@string/BAvancar" />            
            	</TableRow>
            	
			</TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>